--- a/test/es5/index.html
+++ b/test/es5/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Custom Elements Built-in Extends - Transpiled</title>
   <script>this.customElements||document.write('<script src="https://unpkg.com/document-register-element"><\x2fscript>');</script>
-  <script src="./index.js"></script>
+  <script src="./min.js"></script>
 </head>
 <body>
   <button color="blue" is="my-button">
